--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@
 	text-align: center;
 	font-weight: bold;
 }
+
+.red {
+	background: red;
+}
+.green {
+	background: green;
+}
+.blue {
+	background: blue;
+}
